--- a/Moof Janibore/DESCRIPTION
+++ b/Moof Janibore/DESCRIPTION
@@ -1,4 +1,6 @@
-Mojo Hand FX Iron Bell
+Mojo Hand FX
+Iron Bell
+Modded Tubescreamer
 Substitutions:
 BC550 subbed for BC850
 2N5088 subbed for MMBT5088
