--- a/Moses_Ft._Creamer/DESCRIPTION
+++ b/Moses_Ft._Creamer/DESCRIPTION
@@ -1,4 +1,5 @@
-Mosfet Screamer Clone
+Hungry Robot
+Mosfet Screamer
 Offboard SPDT switch for Hi/Lo pinheader or jumper
 Substitutions:
 1N914 Clipping diodes swapped with BAT54S
