--- a/Trail_(Con)/DESCRIPTION
+++ b/Trail_(Con)/DESCRIPTION
@@ -1,4 +1,5 @@
-Mid-Fi Clari(not) Clone
+Mid-Fi Electronics
+Clari(not) Clone
 Warbling Modulated PT2399 produces deep chorus/vibrato effects.
 Depth B100k
 Blend B25k
