--- a/Pawmeat_Ton/DESCRIPTION
+++ b/Pawmeat_Ton/DESCRIPTION
@@ -1,3 +1,4 @@
 ~Incomplete~
 ~Halted due to concerns over breaching components' current rating~
 Electrosmash 1Wamp Clone
+R-C & C-R filter values altered
